# skill-vs-structure-rl

./: .gitignore  README.md  pyproject.toml  research_problem.md
context/: decisions.md  deep-research-findings.md  lit-review-full-reads.md  lit-scoop-check.md  novelty-check-mc1.md  novelty-check-n1-n2.md  open-questions.md  scoop-reads-plan2.md
docs/: design_2026-07-18_skill-vs-structure-residual-rl.md  design_2026-07-19_expressive-residual-tilt.md  design_2026-07-19_mc2-causal-probing.md  design_2026-07-20_rq3-real-faithfulness.md  design_2026-07-20_rq3-tilt-faithfulness.md
docs/plans/: 2026-07-18_mc1-synthetic-validation.md  2026-07-19_plan2-real-data-rq1.md  (+4 more)
scripts/: rq1_lsf.sh  rq1_parallel.py  rq1_sweep_aggregate.py  rq1_sweep_task.py  rq1_sweep_task.sh  rq2_tilt.sh  rq2_tilt_parallel.py  rq3_faithfulness.sh  rq3_faithfulness_real.sh  rq3_faithfulness_tilt.sh
src/: allocation_env.py  attribution.py  base_policies.py  baselines.py  data.py  interventions.py  metrics.py  placebo.py  real_market.py  rq1_real_data.py  rq3_faithfulness.py  simplex.py  synthetic_market.py  train.py  validate_skill.py  walk_forward.py
tests/: test_allocation_env.py  test_allocation_env_tilt.py  test_attribution.py  test_base_policies.py  test_baselines.py  test_data.py  test_interventions.py  test_metrics.py  test_placebo.py  test_real_market.py  test_rq1_real_data.py  test_rq1_real_data_tilt.py  test_rq3_faithfulness.py  test_simplex.py  test_synthetic_market.py  test_train.py  test_train_tilt.py  test_validate_skill.py  test_validate_skill_tilt.py  test_walk_forward.py
(+4 files in other folders)
