[project]
name = "rl-allocation-audit"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.3.0",
    "matplotlib>=3.11.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scipy>=1.17.1",
    "stable-baselines3[extra]>=2.9.0",
    "torch>=2.13.0",
    "tqdm>=4.69.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
